<resources>
    <string name="app_name">Drone</string>
    <string-array name="mission_plan_menu">
        <item>MISSION PLAN</item>
        <item>FOLLOW ME</item>
        <item>FLIGHT HISTORY</item>
    </string-array>
    <string name="delete_all">DELETE ALL</string>
    <string name="done">DONE</string>
    <string name="cancel">CANCEL</string>
    <string name="database_url">http://175.111.192.40:4984/coretronicdroneg1</string>
    <string name="tv_txt_welcome">Welcome</string>
    <string name="tv_txt_passwd">Password</string>
    <string name="chk_txt_login">Stay logged in</string>
    <string name="btn_txt_login">Log In</string>
    <string name="email_hint">Email</string>
    <string name="font_roboto_regular">sans-serif</string>
    <string name="font_roboto_light">sans-serif-light</string>
    <string name="font_roboto_condensed">sans-serif-condensed</string>
    <string name="font_roboto_thin">sans-serif</string>
    <string name="font_roboto_medium">sans-serif</string>
    <string name="font_roboto_black">sans-serif</string>
    <string name="font_roboto_condensed_light">sans-serif-condensed</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="btn_go">GO</string>
    <string name="unit_in_meter">m</string>
    <string name="flight_altitude">Altitude</string>
    <string name="flight_distance">DISTANCE</string>
    <string name="location_format">90.000000,180.000000</string>
    <string name="altitude">ALTITUDE</string>
    <string name="altitude_for_takeoff">Altitude for Takeoff</string>
    <string name="confirm">Confirm</string>
    <string name="keep_going_the_mission">Keep going the mission</string>
    <string name="stop_mission_to_rtl">Are you sure want to stop mission and return home directly?</string>
    <string name="return_to_home">Return to Home</string>
    <string name="read_parameter_retry_quest">Read parameters fail. \nWhat do you want to?</string>
    <string name="abort">Abort</string>
    <string name="retry">Retry</string>
    <string name="stay">Stay</string>
    <string name="speed_to_next">Speed to Next</string>
    <string name="second">sec</string>
    <string name="delete">DELETE</string>
    <string name="auto_rtl_request">Do you want to return home when mission is completed?</string>
    <string name="go_without_rtl">Go and not Return Home</string>
    <string name="go_with_rtl">Yes and Go</string>
    <string name="landing_request">Are you sure want to Landing now?</string>
    <string name="follow_me_start">START FOLLOW</string>
    <string name="follow_me_stop">STOP FOLLOW</string>
    <string name="radius">Radius</string>
    <string name="flight_duration">TIME</string>
    <string name="duration_hint">00:00</string>
    <string name="activate_plan">ACTIVATE</string>
    <string name="date_hint">05.05.2015</string>
    <string name="distance_hint">20.0m</string>
    <string name="time_hint">09:26</string>
    <string name="altitude_max">Altitude Max</string>
    <string name="range_max">Range Max</string>
    <string name="vertical_speed_max">Vertical Speed Max</string>
    <string name="rotation_speed_max">ROTATION SPEED MAX</string>
    <string name="tilt_angle_max">TILT ANGLE MAX</string>
    <string name="low_power_protection">LOW POWER PROTECT</string>
    <string name="low_power_protection_level_1">LEVEL1</string>
    <string name="low_power_protection_level_2">LEVEL2</string>
    <string name="flat_trim">Flat Trim</string>
    <string name="execute">Execute</string>
    <string name="last_execution">Last Execution:</string>
    <string name="basic_aileron_gain">BASIC AILERON GAIN</string>
    <string name="basic_elevator_gain">BASIC ELEVATOR GAIN</string>
    <string name="basic_rudder_gain">BASIC RUDDER GAIN</string>
    <string name="attitude_gps_aileron_gain">ATTITUDE/GPS AILERON GAIN</string>
    <string name="attitude_gps_elevator_gain">ATTITUDE/GPS ELEVATOR GAIN</string>
    <string name="attitude_gps_rudder_gain">ATTITUDE/GPS RUDDER GAIN</string>
    <string name="altitude_gain">ALTITUDE GAIN</string>
    <string name="rc_transmitter_receiver">RC TRANSMITTER &amp;\nRECEIVER</string>
    <string name="gain">GAIN</string>
    <string name="battery_and_failsafe">BATTERY &amp; FAILSAFE</string>
    <string name="general">GENERAL</string>
    <string name="frame_type_all_cap">FRAME TYPE</string>
    <string name="frame_type">Frame Type</string>
    <string name="rc_disconnected">RC Disconnected</string>
    <string name="rc_connected">RC Connected</string>
    <string name="drone_disconnected">Drone Disconnected</string>
    <string name="drone_connected">Drone Connected</string>
    <string name="receiver_type">Receiver Type</string>
    <string name="receiver_type_futaba">Futaba</string>
    <string name="receiver_type_jr">JR</string>
    <string name="receiver_type_spektrum">Spektrum</string>
    <string name="flight_mode">Flight Mode</string>
    <string name="flight_mode_1">Flight Mode 1</string>
    <string name="flight_mode_2">Flight Mode 2</string>
    <string name="flight_mode_3">Flight Mode 3</string>
    <string name="flight_mode_4">Flight Mode 4</string>
    <string name="flight_mode_5">Flight Mode 5</string>
    <string name="flight_mode_6">Flight Mode 6</string>
    <string name="heading_lock">Heading Lock</string>
    <string name="home_lock">Home Lock</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="gps">GPS</string>
    <string name="tuning">Tuning</string>
    <string name="throttle_position_for_hovering">Throttle Position \nfor Hovering</string>
    <string name="basic_p_gain_roll_pitch">Basic P Gain \n- Roll / Pitch</string>
    <string name="gear">Gear</string>
    <string name="reverse">Reverse</string>
    <string name="retract">Retract</string>
    <string name="deploy">Deploy</string>
    <string name="camera_trigger">Camera Trigger</string>
    <string name="calibration">Calibration</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="roll">Roll</string>
    <string name="pitch">Pitch</string>
    <string name="yaw">Yaw</string>
    <string name="throttle">Throttle</string>
    <string name="minus_hundred_percent">-100%</string>
    <string name="one_hundred_percent">100%</string>
    <string name="basic_gain">Basic Gain</string>
    <string name="attitude_gps_mode_gain">Attitude/GPS\nMode Gain</string>
    <string name="unit_in_percent">%</string>
    <string name="battery_capacity">Battery Capacity</string>
    <string name="per_battery">Per Battery</string>
    <string name="zero_mah">0mAh</string>
    <string name="ten_thousand_mah">10000mAh</string>
    <string name="sixteen_thousand_mah">16000mAh</string>
    <string name="twenty_two_thousand_mah">22000mAh</string>
    <string name="failsafe">Failsafe</string>
    <string name="battery_remaining">Battery \nRemaining</string>
    <string name="none">None</string>
    <string name="rtl">RTL</string>
    <string name="land">Land</string>
    <string name="rc_signal_lost">RC Signal Lost</string>
    <string name="gps_signal_lost">GPS Signal Lost</string>
    <string name="gcs_signal_lost">GCS Signal Lost</string>
    <string name="except_manual_mode">Except Manual Mode</string>
    <string name="horizontal_speed_max">Horizontal Speed Max</string>
    <string name="for_gps_mode">For GPS Mode</string>
    <string name="rtl_speed">RTL Speed</string>
    <string name="rtl_altitude">RTL Altitude</string>
    <string name="heading_direction">Heading Direction</string>
    <string name="never_change">Never Change</string>
    <string name="next_waypoint">Next Waypoint</string>
    <string name="rtl_heading_direction">RTL Heading Direction</string>
    <string name="front">Front</string>
    <string name="rear">Rear</string>
    <string name="throttle_position">Throttle Position</string>
    <string name="for_hovering">For Hovering</string>
    <string name="altitude_default">Altitude Default</string>
    <string name="takeoff_altitude_default">Takeoff Altitude Default</string>
    <string name="horizontal_speed_default">Horizontal Speed Default</string>
    <string name="for_waypoint">For Waypoint</string>
    <string name="optical_flow">Optical Flow</string>
    <string name="magnetic_field_deviation">Magnetic Field Deviation</string>
    <string name="auto_adjust">Auto adjust</string>
    <string name="show_flight_route">Show Flight Route</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="check_now">Check Now</string>
    <string name="preflight_check">Preflight Check</string>
    <string name="ok">OK</string>
    <string name="test_for_motors">Test for Motors</string>
    <string name="remote_controller">Remote Controller</string>
    <string name="compass">Compass</string>
    <string name="accelerometers">Accelerometers</string>
    <string name="barometer">Barometer</string>
    <string name="sonar">Sonar</string>
    <string name="connected">Connected</string>
    <string name="unconnected">Unconnected</string>
    <string name="no_signal">No Signal</string>
    <string name="ready">Ready</string>
    <string name="not_ready">Not Ready</string>
    <string name="version">version</string>
    <string name="mission_plan">MISSION PLAN</string>
    <string name="flight_history">FLIGHT HISTORY</string>
    <string name="zero_percent">0%</string>
    <string name="switch_btn_off">OFF</string>
    <string name="switch_btn_on">ON</string>
    <string name="reset">RESET</string>
    <string name="altitude_hint">5</string>
    <string name="groundSpeed">H.S</string>
    <string name="climbSpeed">V.S</string>
    <string name="speed_hint">0</string>
    <string name="speed_unit">m/s</string>
    <string name="target">TARGET</string>
    <string name="target_hint">-- m</string>
    <string name="from_home">FROM HOME</string>
    <string name="from_home_hint">-- m</string>
    <string name="latitude_hint">-90.00000,</string>
    <string name="longitude_hint">-180.00000</string>
    <string name="mission_id_hint">44</string>
    <string name="wheel_text_hint">22</string>
    <string name="drone_stop_button_text">STOP</string>
    <string name="fpv_unconnect">UNCONNECT</string>
    <string name="aerial_survey_create_route">CREATE ROUTE</string>
    <string name="aerial_survey_footprint">FOOTPRINT</string>
    <string name="aerial_survey_footprint_hint">16.2mx42.2m</string>
    <string name="aerial_survey_gsd">GSD</string>
    <string name="aerial_survey_gsd_hint">21.3mm2/px</string>
    <string name="aerial_survey_longitudinal">LONGITUDINAL</string>
    <string name="aerial_survey_longitudinal_hint">21.3m</string>
    <string name="aerial_survey_lateral">LATERAL</string>
    <string name="aerial_survey_lateral_hint">24.5m</string>
    <string name="aerial_survey_area">Area</string>
    <string name="aerial_survey_area_hint">28933m2</string>
    <string name="aerial_survey_picture">PICTURE</string>
    <string name="aerial_survey_picture_hint">64</string>
    <string name="aerial_survey_picture_unit">pcs</string>
    <string name="aerial_survey_strips">NUMBER OF STRIPS</string>
    <string name="aerial_survey_strips_hint">8</string>
    <string name="aerial_survey_dialog_back">BACK</string>
    <string name="aerial_survey_dialog_camera">Camera</string>
    <string name="aerial_survey_dialog_camera_hint">Canon SX260</string>
    <string name="save_mission">Save Mission</string>
    <string name="load_mission">Load Mission</string>
    <string name="clear_mission">Clear Mission</string>
    <string name="connect_to_drone">Connect to Drone</string>
    <string name="disconnect">Disconnect</string>
</resources>