<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mission_item_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/mission_item_recycle_view_bottom_margin"
        android:layout_marginTop="@dimen/mission_item_recycle_view_top_margin"
        android:fadeScrollbars="true"
        android:scrollbars="vertical"/>

    <FrameLayout
        android:id="@+id/way_point_detail_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/mission_item_recycler_view"
        android:layout_toStartOf="@id/mission_item_recycler_view"
        android:clickable="true"/>

    <Button
        android:id="@+id/create_route_button"
        android:layout_width="224dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="52dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/create_route_button_bg"
        android:fontFamily="@string/font_roboto_regular"
        android:text="@string/aerial_survey_create_route"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/distance_and_time_info"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black_transparent_85"
        android:gravity="bottom"
        android:padding="8dp">

        <TextView
            style="@style/mav_info_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_distance"/>

        <TextView
            android:id="@+id/distance_value_text_view"
            style="@style/mav_info_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20.0"/>

        <TextView
            android:id="@+id/distance_unit_text_view"
            style="@style/mav_info_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_in_meter"/>

        <TextView
            style="@style/mav_info_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/flight_duration"/>

        <TextView
            android:id="@+id/time_value_text_view"
            style="@style/mav_info_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_hint"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/route_detail_info"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/black_transparent_55"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/mav_info_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aerial_survey_footprint"/>

            <TextView
                android:id="@+id/footprint_value_text_view"
                style="@style/mav_info_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/aerial_survey_footprint_hint"/>

            <TextView
                style="@style/mav_info_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/aerial_survey_gsd"/>

            <TextView
                android:id="@+id/gsd_value_text_view"
                style="@style/mav_info_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/aerial_survey_gsd_hint"/>

            <TextView
                style="@style/mav_info_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/aerial_survey_longitudinal"/>

            <TextView
                android:id="@+id/longitudinal_value_text_view"
                style="@style/mav_info_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/aerial_survey_longitudinal_hint"/>

            <TextView
                android:id="@+id/longitudinal_unit_text_view"
                style="@style/mav_info_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/unit_in_meter"/>

            <TextView
                style="@style/mav_info_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/aerial_survey_lateral"/>

            <TextView
                android:id="@+id/lateral_value_text_view"
                style="@style/mav_info_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/aerial_survey_lateral_hint"/>

            <TextView
                android:id="@+id/lateral_unit_text_view"
                style="@style/mav_info_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/unit_in_meter"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/mav_info_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aerial_survey_area"/>

            <TextView
                android:id="@+id/area_value_text_view"
                style="@style/mav_info_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/aerial_survey_area_hint"/>

            <TextView
                style="@style/mav_info_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/aerial_survey_picture"/>

            <TextView
                android:id="@+id/picture_value_text_view"
                style="@style/mav_info_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/aerial_survey_picture_hint"/>

            <TextView
                android:id="@+id/picture_unit_text_view"
                style="@style/mav_info_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aerial_survey_picture_unit"/>

            <TextView
                style="@style/mav_info_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/aerial_survey_strips"/>

            <TextView
                android:id="@+id/strips_value_text_view"
                style="@style/mav_info_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/aerial_survey_strips_hint"/>

        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/route_properties_dialog"
        layout="@layout/fragment_aerial_survey_route_properties_dialog"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"/>

</RelativeLayout>