<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="440dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@string/font_roboto_medium"
        android:text="@string/read_parameter_retry_quest"
        android:textColor="#474747"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/abort_button"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:background="@drawable/popdialog_button_bg"
            android:fontFamily="@string/font_roboto_condensed"
            android:text="@string/abort"
            android:textColor="@color/primary_color_normal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/popdialog_button_bg"
            android:fontFamily="@string/font_roboto_condensed"
            android:text="@string/retry"
            android:textColor="@color/primary_color_normal"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>