<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp">

    <TextView
        android:id="@+id/rc_cali_label"
        style="@style/settings_title_lv_2"
        android:layout_width="204dp"
        android:layout_height="match_parent"
        android:gravity="end|center_vertical"
        android:text="@string/roll" />

    <ToggleButton
        android:id="@+id/reverse_button"
        style="@style/settings_button_text"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/settings_button_bg"
        android:textOff="@string/reverse"
        android:textOn="@string/reverse" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@id/rc_cali_label"
        android:layout_toLeftOf="@id/reverse_button"
        android:layout_toRightOf="@id/rc_cali_label"
        android:layout_toStartOf="@id/reverse_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_roboto_light"
            android:text="@string/minus_hundred_percent"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:fontFamily="@string/font_roboto_light"
            android:text="@string/one_hundred_percent"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/rc_calibration_bar_pwm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@string/font_roboto_regular"
            android:text="@string/zero_percent"
            android:textColor="@color/primary_color_normal"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/rc_cali_seekbar"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/rc_cali_label"
        android:layout_toLeftOf="@id/reverse_button"
        android:layout_toRightOf="@id/rc_cali_label"
        android:layout_toStartOf="@id/reverse_button"
        android:padding="0dp"
        android:progressDrawable="@drawable/rc_cali_seekbar_progress"
        android:thumb="@drawable/rc_cali_seekbar_thumb" />

</RelativeLayout>